--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "laf-toolkit",
   "displayName": "laf toolkit",
   "description": "laf 云开发本地化开发插件，结合 Git 使用更佳！",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "author": "NightWhite",
   "publisher": "NightWhite",
   "icon": "laf.png",
   "repository": {},
   "engines": {
-    "vscode": "^1.75.0"
+    "vscode": "^1.85.0"
   },
   "categories": [
     "Programming Languages"
   ],
   "activationEvents": [],
-  "main": "./extension.ts",
+  "main": "./dist/extension.js",
   "scripts": {
-    "build": "rm -rf ./dist/* && rollup -c build/rollup.config.js --environment NODE_ENV:production",
-    "package": "npm version patch && cp README.md laf.png package.json LICENSE.txt CHANGELOG.md ./dist && cd dist/ && vsce package",
-    "publish": "cd dist/ && vsce publish"
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "vscode-test"
   },
   "contributes": {
     "commands": [
@@ -112,20 +118,17 @@
     }
   },
   "devDependencies": {
-    "@types/vscode": "^1.75.0",
-    "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "16.x",
-    "eslint": "^8.34.0",
-    "glob": "^8.1.0",
-    "mocha": "^10.2.0",
-    "typescript": "^4.9.5",
-    "@vscode/test-electron": "^2.2.3",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "babel-preset-env": "^1.7.0",
-    "rollup": "^1.28.0",
-    "rollup-plugin-terser": "^5.1.3"
+    "@types/mocha": "^10.0.6",
+    "@types/node": "20.x",
+    "@types/vscode": "^1.85.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@vscode/test-cli": "^0.0.4",
+    "@vscode/test-electron": "^2.3.8",
+    "eslint": "^8.56.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
