fix: 去掉 lock和添加调试模式 (#4)
* fix: 去掉 lock

* feat: 添加调试模式

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 out
 dist
 node_modules
-.vscode-test/
 *.vsix
 laf-cloud/**
 .vscode/laf-exec.json
 .vscode/laf.json
-
+package-lock.json
+pnpm-lock.yaml
+**DS_Store**
