feat: 优化项目结构和日志

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 			"script": "compile",
 			"problemMatcher": [],
 			"label": "npm",
-			"detail": "npm run compile --disable-extensions"
+			"detail": "npm run compile"
 		}
 	]
 }
