--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
   },
   "exclude": [
-    "laf-cloud/**"
+    "laf-cloud/**",
+    "webpack.config.ts"
   ]
 }
