--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,20 @@
+// A launch configuration that compiles the extension and then opens it inside a new window
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问：https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Extension",
+            "type": "extensionHost",
+            "request": "launch",
+            "runtimeExecutable": "${execPath}",
             "args": [
+				"--disable-extensions",
                 "--extensionDevelopmentPath=${workspaceFolder}"
             ],
-            "name": "启动扩展",
             "outFiles": [
-                "${workspaceFolder}/out/**/*.js"
+                "${workspaceFolder}/dist/**/*.js"
             ],
-            "preLaunchTask": "npm",
-            "request": "launch",
-            "type": "extensionHost"
+            "preLaunchTask": "npm: webpack"
         }
     ]
 }
